updating staging environment

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -24,6 +24,10 @@
   "station.settings.language.nl": "Nederlands",
   "station.settings.language.ko": "한국어",
   "station.settings.language.sl": "Slovenščina",
+  "station.settings.language.ru": "Русский",
+  "station.settings.language.ka": "ქართული",
+  "station.settings.language.ms": "Melayu",
+  "station.settings.language.zh": "简体中文",
   "station.settings.altitude": "Altitude (m)",
   "station.settings.antenna": "Antenna",
   "station.settings.button.save": "Save Settings",
@@ -77,6 +81,10 @@
   "plugins.layers.earthquakes.name": "Earthquakes",
   "plugins.layers.earthquakes.description": "Live USGS earthquake data (M2.5+ from last 24 hours)",
   "plugins.layers.earthquakes.viewDetails": "View Details →",
+  "plugins.layers.wildfires.name": "Wildfires",
+  "plugins.layers.wildfires.description": "Active wildfires worldwide via NASA EONET satellite detection",
+  "plugins.layers.floods.name": "Floods & Storms",
+  "plugins.layers.floods.description": "Active floods and severe storms worldwide via NASA EONET",
   "plugins.layers.grayline.name": "Gray Line",
   "plugins.layers.grayline.description": "Day/night terminator with twilight zones",
   "plugins.layers.grayline.title": "Gray Line",
