WIP [FEATURE] Move the Gray Line box and options to the Station Setting>Map Layers Tab Fixes #233

--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "Klicken zum Fortsetzen",
   "app.legend.moon": "Mond",
   "app.legend.sun": "Sonne",
+  "app.mapUi.hide": "UI ausblenden",
+  "app.mapUi.show": "UI einblenden",
+  "app.mapControls.lock": "Sperren",
+  "app.mapControls.unlock": "Entsperren",
+  "app.mapControls.calls.hide": "Rufzeichen ausblenden",
+  "app.mapControls.calls.show": "Rufzeichen anzeigen",
   "app.liveSpots.ofGridLastMinutes": "von {{grid}} - {{minutes}} Min",
   "app.liveSpots.title": "Live-Spots",
   "app.onAir.receiving": "RX",
