--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "Clic para reanudar",
   "app.legend.moon": "Moon",
   "app.legend.sun": "Sun",
+  "app.mapUi.hide": "Ocultar interfaz",
+  "app.mapUi.show": "Mostrar interfaz",
+  "app.mapControls.lock": "Bloquear",
+  "app.mapControls.unlock": "Desbloquear",
+  "app.mapControls.calls.hide": "Ocultar indicativos",
+  "app.mapControls.calls.show": "Mostrar indicativos",
   "app.liveSpots.ofGridLastMinutes": "de {{grid}} - {{minutes}} min",
   "app.liveSpots.title": "Spots en vivo",
   "app.onAir.receiving": "RX",
