--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "Cliquer pour reprendre",
   "app.legend.moon": "Moon",
   "app.legend.sun": "Sun",
+  "app.mapUi.hide": "Masquer interface",
+  "app.mapUi.show": "Afficher interface",
+  "app.mapControls.lock": "Verrouiller",
+  "app.mapControls.unlock": "Deverrouiller",
+  "app.mapControls.calls.hide": "Masquer indicatifs",
+  "app.mapControls.calls.show": "Afficher indicatifs",
   "app.liveSpots.ofGridLastMinutes": "de {{grid}} - {{minutes}} min",
   "app.liveSpots.title": "Spots en direct",
   "app.onAir.receiving": "RÉCEPTION",
