--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "Clicca per riprendere",
   "app.legend.moon": "Moon",
   "app.legend.sun": "Sun",
+  "app.mapUi.hide": "Nascondi interfaccia",
+  "app.mapUi.show": "Mostra interfaccia",
+  "app.mapControls.lock": "Blocca",
+  "app.mapControls.unlock": "Sblocca",
+  "app.mapControls.calls.hide": "Nascondi nominativi",
+  "app.mapControls.calls.show": "Mostra nominativi",
   "app.liveSpots.ofGridLastMinutes": "di {{grid}} - {{minutes}} min",
   "app.liveSpots.title": "Spots in diretta",
   "app.onAir.receiving": "RX",
