--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "クリックして再開",
   "app.legend.moon": "Moon",
   "app.legend.sun": "Sun",
+  "app.mapUi.hide": "UIを隠す",
+  "app.mapUi.show": "UIを表示",
+  "app.mapControls.lock": "ロック",
+  "app.mapControls.unlock": "ロック解除",
+  "app.mapControls.calls.hide": "コールサインを隠す",
+  "app.mapControls.calls.show": "コールサインを表示",
   "app.liveSpots.ofGridLastMinutes": "{{grid}} の {{minutes}} 分",
   "app.liveSpots.title": "ライブスポット",
   "app.onAir.receiving": "受信中",
