--- a/src/lang/ko.json
+++ b/src/lang/ko.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "클릭하여 다시 시작",
   "app.legend.moon": "Moon",
   "app.legend.sun": "Sun",
+  "app.mapUi.hide": "UI 숨기기",
+  "app.mapUi.show": "UI 표시",
+  "app.mapControls.lock": "잠금",
+  "app.mapControls.unlock": "잠금 해제",
+  "app.mapControls.calls.hide": "콜사인 숨기기",
+  "app.mapControls.calls.show": "콜사인 표시",
   "app.liveSpots.ofGridLastMinutes": "{{grid}} – {{minutes}}분",
   "app.liveSpots.title": "실시간 스팟",
   "app.onAir.receiving": "수신 중",
