--- a/src/lang/ms.json
+++ b/src/lang/ms.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "Klik untuk sambung tatalan",
   "app.legend.moon": "Bulan",
   "app.legend.sun": "Matahari",
+  "app.mapUi.hide": "Sembunyi UI",
+  "app.mapUi.show": "Tunjuk UI",
+  "app.mapControls.lock": "Kunci",
+  "app.mapControls.unlock": "Buka kunci",
+  "app.mapControls.calls.hide": "Sembunyi callsign",
+  "app.mapControls.calls.show": "Tunjuk callsign",
   "app.liveSpots.ofGridLastMinutes": "dari {{grid}} - {{minutes}} min",
   "app.liveSpots.title": "Bintik Langsung",
   "app.onAir.receiving": "RX",
