--- a/src/lang/nl.json
+++ b/src/lang/nl.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "Klik om te hervatten",
   "app.legend.moon": "Moon",
   "app.legend.sun": "Sun",
+  "app.mapUi.hide": "UI verbergen",
+  "app.mapUi.show": "UI tonen",
+  "app.mapControls.lock": "Vergrendelen",
+  "app.mapControls.unlock": "Ontgrendelen",
+  "app.mapControls.calls.hide": "Callsigns verbergen",
+  "app.mapControls.calls.show": "Callsigns tonen",
   "app.liveSpots.ofGridLastMinutes": "van {{grid}} - {{minutes}} min",
   "app.liveSpots.title": "Live spots",
   "app.onAir.receiving": "ONTVS",
