--- a/src/lang/pt.json
+++ b/src/lang/pt.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "Clique para resumir",
   "app.legend.moon": "Moon",
   "app.legend.sun": "Sun",
+  "app.mapUi.hide": "Ocultar interface",
+  "app.mapUi.show": "Mostrar interface",
+  "app.mapControls.lock": "Bloquear",
+  "app.mapControls.unlock": "Desbloquear",
+  "app.mapControls.calls.hide": "Ocultar indicativos",
+  "app.mapControls.calls.show": "Mostrar indicativos",
   "app.liveSpots.ofGridLastMinutes": "de {{grid}} - {{minutes}} min",
   "app.liveSpots.title": "Spots ao vivo",
   "app.onAir.receiving": "RX",
