--- a/src/lang/sl.json
+++ b/src/lang/sl.json
@@ -21,6 +21,12 @@
   "app.dxNews.resumeTooltip": "Kliknite za nadaljevanje",
   "app.legend.moon": "Moon",
   "app.legend.sun": "Sun",
+  "app.mapUi.hide": "Skrij vmesnik",
+  "app.mapUi.show": "Prikazi vmesnik",
+  "app.mapControls.lock": "Zakleni",
+  "app.mapControls.unlock": "Odkleni",
+  "app.mapControls.calls.hide": "Skrij klicne znake",
+  "app.mapControls.calls.show": "Prikazi klicne znake",
   "app.liveSpots.ofGridLastMinutes": "od {{grid}} - {{minutes}} min",
   "app.liveSpots.title": "Živi spoti",
   "app.onAir.receiving": "SPREJEM",
