--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -327,7 +327,7 @@
   "station.settings.rigControl.title": "📻 Rig Control",
   "station.settings.rigControl.enabled": "Enable Hamlib integration",
   "station.settings.rigControl.host": "Rig Daemon Host",
-  "station.settings.rigControl.port": "Rig Daemon Port",
+  "station.settings.rigControl.port": "Rig Daemon Port (0 = no port)",
   "station.settings.rigControl.tuneEnabled": "Click-to-tune",
   "station.settings.rigControl.tuneEnabled.hint": "Allow clicking spots to retune rig",
   "station.settings.rigControl.autoMode": "Auto-set mode",
