--- a/src/lang/de.json
+++ b/src/lang/de.json
@@ -292,7 +292,7 @@
   "station.settings.rigControl.autoMode.hint": "Switch to CW/SSB/Data based on band plan when tuning",
   "station.settings.rigControl.enabled": "Hamlib-Integration aktivieren",
   "station.settings.rigControl.host": "Rig Daemon Host",
-  "station.settings.rigControl.port": "Rig Daemon Port",
+  "station.settings.rigControl.port": "Rig Daemon Port (0 = kein Port)",
   "station.settings.rigControl.title": "📻 Funksteuerung",
   "station.settings.rigControl.tuneEnabled": "Click-to-tune",
   "station.settings.rigControl.tuneEnabled.hint": "Klicken auf Spots stimmt das Funkgerät ab",
