--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -292,7 +292,7 @@
   "station.settings.rigControl.autoMode.hint": "Switch to CW/SSB/Data based on band plan when tuning",
   "station.settings.rigControl.enabled": "Habilitar integración Hamlib",
   "station.settings.rigControl.host": "Host del Demonio",
-  "station.settings.rigControl.port": "Puerto del Demonio",
+  "station.settings.rigControl.port": "Puerto del Demonio (0 = no port)",
   "station.settings.rigControl.title": "📻 Control de Radio",
   "station.settings.rigControl.tuneEnabled": "Clic para sintonizar",
   "station.settings.rigControl.tuneEnabled.hint": "Hacer clic en spots sintoniza la radio",
