--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -292,7 +292,7 @@
   "station.settings.rigControl.autoMode.hint": "Switch to CW/SSB/Data based on band plan when tuning",
   "station.settings.rigControl.enabled": "Abilita integrazione Hamlib",
   "station.settings.rigControl.host": "Host Demone",
-  "station.settings.rigControl.port": "Porta Demone",
+  "station.settings.rigControl.port": "Porta Demone (0 = no port)",
   "station.settings.rigControl.title": "📻 Controllo Radio",
   "station.settings.rigControl.tuneEnabled": "Clicca per accordare",
   "station.settings.rigControl.tuneEnabled.hint": "Cliccando uno spot si sintonizza la radio",
